--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 patreon: Not Needed :)
-custom: https://t.me/krish1303y
+custom: https://t.me/whyredisgod
